--- a/password-security-analyzer.html
+++ b/password-security-analyzer.html
@@ -31,7 +31,7 @@
             --bar-track: rgba(255, 255, 255, 0.05);
         }
 
-        * { box-sizing: border-box; margin: 0; padding: 0; transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
+        * { box-sizing: border-box; margin: 0; padding: 0; transition: all 0.3s ease; }
 
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
@@ -40,15 +40,10 @@
             min-height: 100vh;
             display: flex;
             justify-content: center;
-            align-items: flex-start;
             padding: 20px;
         }
 
-        .main-container {
-            width: 100%;
-            max-width: 800px;
-            margin-top: 40px;
-        }
+        .main-container { width: 100%; max-width: 800px; margin-top: 40px; }
 
         header {
             display: flex;
@@ -58,13 +53,7 @@
             margin-bottom: 30px;
         }
 
-        h1 {
-            font-size: 1.8rem;
-            font-weight: 700;
-            line-height: 1.2;
-            margin-bottom: 10px;
-            letter-spacing: -0.5px;
-        }
+        h1 { font-size: 1.8rem; font-weight: 700; margin-bottom: 10px; }
 
         .toggle-btn {
             background: var(--surface);
@@ -74,7 +63,6 @@
             cursor: pointer;
             color: var(--text-heading);
             font-size: 0.9rem;
-            font-weight: 600;
             display: flex;
             align-items: center;
             gap: 10px;
@@ -90,11 +78,7 @@
             box-shadow: 0 10px 25px rgba(0,0,0,0.05);
         }
 
-        .input-box {
-            position: relative;
-            margin-bottom: 25px;
-        }
-
+        .input-box { position: relative; margin-bottom: 25px; }
         input {
             width: 100%;
             background: var(--bg);
@@ -104,37 +88,14 @@
             color: var(--text-heading);
             font-size: 1.1rem;
             outline: none;
-            -webkit-appearance: none;
         }
         input:focus { border-color: var(--accent); }
+        .input-box i { position: absolute; left: 20px; top: 50%; transform: translateY(-50%); color: var(--text-body); }
 
-        .input-box i {
-            position: absolute;
-            left: 20px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: var(--text-body);
-        }
+        .meter { height: 10px; background: var(--bar-track); border-radius: 20px; margin-bottom: 30px; overflow: hidden; }
+        .meter-bar { height: 100%; width: 0%; border-radius: 20px; }
 
-        .meter {
-            height: 10px;
-            background: var(--bar-track);
-            border-radius: 20px;
-            margin-bottom: 30px;
-            overflow: hidden;
-        }
-
-        .meter-bar {
-            height: 100%;
-            width: 0%;
-            transition: width 0.8s ease-out;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: 1.2fr 0.8fr;
-            gap: 20px;
-        }
+        .grid { display: grid; grid-template-columns: 1.2fr 0.8fr; gap: 20px; }
 
         .info-cell {
             background: rgba(0,0,0,0.02);
@@ -144,49 +105,19 @@
         }
         [data-theme="dark"] .info-cell { background: rgba(255,255,255,0.03); }
 
-        .label {
-            font-size: 0.7rem;
-            font-weight: 700;
-            text-transform: uppercase;
-            color: var(--text-body);
-            margin-bottom: 12px;
-            display: block;
-        }
+        .label { font-size: 0.7rem; font-weight: 700; text-transform: uppercase; color: var(--text-body); margin-bottom: 12px; display: block; }
+        
+        #time-display { font-size: 1.8rem; font-weight: 700; }
+        #bits-pill { font-weight: 600; color: var(--accent); font-size: 0.9rem; margin-top: 15px; border-top: 1px solid var(--border); padding-top: 15px; }
 
-        #time-display {
-            font-size: 1.8rem;
-            font-weight: 700;
-            margin-bottom: 5px;
-        }
-
-        #bits-pill {
-            font-weight: 600;
-            color: var(--accent);
-            font-size: 0.9rem;
-            margin-top: 15px;
-            padding-top: 15px;
-            border-top: 1px solid var(--border);
-        }
-
-        .checklist li {
-            list-style: none;
-            padding: 8px 0;
-            font-size: 0.85rem;
-            color: var(--text-body);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+        .checklist li { list-style: none; padding: 8px 0; font-size: 0.85rem; color: var(--text-body); display: flex; justify-content: space-between; align-items: center; }
         .checklist .met { color: var(--success); font-weight: 600; }
 
-        /* Mobile Specific UI Refinement */
         @media (max-width: 600px) {
             .grid { grid-template-columns: 1fr; }
             h1 { font-size: 1.5rem; }
-            body { padding: 15px; }
             .card { padding: 20px; }
             #time-display { font-size: 1.5rem; }
-            .main-container { margin-top: 20px; }
         }
     </style>
 </head>
@@ -202,8 +133,8 @@
 
         <div class="card">
             <div class="input-box">
-                <input type="text" id="pass-input" placeholder="Check security strength..." autocomplete="off">
-                <i class="fas fa-fingerprint"></i>
+                <input type="text" id="pass-input" placeholder="Start typing to analyze..." autocomplete="off">
+                <i class="fas fa-user-shield"></i>
             </div>
 
             <div class="meter">
@@ -212,19 +143,19 @@
 
             <div class="grid">
                 <div class="info-cell">
-                    <span class="label">Cracking Estimate</span>
+                    <span class="label">Time to Guess</span>
                     <div id="time-display">---</div>
                     <div id="bits-pill">0 bits (Ready)</div>
                 </div>
 
                 <div class="info-cell">
-                    <span class="label">Safety Parameters</span>
+                    <span class="label">Safety Audit</span>
                     <ul class="checklist">
                         <li id="l-1"><span>12+ Length</span> <i class="far fa-circle"></i></li>
                         <li id="l-2"><span>Lower case</span> <i class="far fa-circle"></i></li>
                         <li id="l-3"><span>Upper case</span> <i class="far fa-circle"></i></li>
-                        <li id="l-4"><span>Numeric</span> <i class="far fa-circle"></i></li>
-                        <li id="l-5"><span>Special</span> <i class="far fa-circle"></i></li>
+                        <li id="l-4"><span>Numbers</span> <i class="far fa-circle"></i></li>
+                        <li id="l-5"><span>Symbols</span> <i class="far fa-circle"></i></li>
                     </ul>
                 </div>
             </div>
@@ -253,22 +184,16 @@
 
     function analyze(pwd) {
         let pool = 0;
-        const low = /[a-z]/.test(pwd), up = /[A-Z]/.test(pwd), 
-              num = /[0-9]/.test(pwd), sym = /[^a-zA-Z0-9]/.test(pwd);
-        
+        const low = /[a-z]/.test(pwd), up = /[A-Z]/.test(pwd), num = /[0-9]/.test(pwd), sym = /[^a-zA-Z0-9]/.test(pwd);
         if (low) pool += 26;
         if (up) pool += 26;
         if (num) pool += 10;
         if (sym) pool += 32;
-
         return { pool, low, up, num, sym, len: pwd.length };
     }
 
     function updateUI(pwd, stats) {
-        if (!pwd) {
-            resetUI();
-            return;
-        }
+        if (!pwd) { resetUI(); return; }
 
         toggleList('l-1', stats.len >= 12);
         toggleList('l-2', stats.low);
@@ -279,27 +204,18 @@
         const bits = Math.floor(stats.len * Math.log2(stats.pool || 1));
         const seconds = Math.pow(stats.pool || 1, stats.len) / 1e12;
 
-        let timeMsg = "", color = "", width = "0%", grade = "Poor";
+        let timeMsg = "", color = "", width = "0%", grade = "Insecure";
 
-        if (seconds < 1) {
-            timeMsg = "Instantly";
-            color = "var(--danger)";
-            width = "10%";
-        } else if (seconds < 86400) {
-            timeMsg = "Hours";
-            color = "var(--danger)";
-            width = "30%";
-        } else if (seconds < 31536000) {
-            timeMsg = Math.floor(seconds / 2592000) + " Months";
-            color = "var(--warning)";
-            width = "60%";
-            grade = "Moderate";
-        } else {
+        if (seconds < 1) { timeMsg = "Instantly"; color = "var(--danger)"; width = "10%"; }
+        else if (seconds < 60) { timeMsg = Math.floor(seconds) + " Seconds"; color = "var(--danger)"; width = "20%"; }
+        else if (seconds < 3600) { timeMsg = Math.floor(seconds / 60) + " Minutes"; color = "var(--danger)"; width = "30%"; }
+        else if (seconds < 86400) { timeMsg = Math.floor(seconds / 3600) + " Hours"; color = "var(--warning)"; width = "45%"; grade = "Poor"; }
+        else if (seconds < 604800) { timeMsg = Math.floor(seconds / 86400) + " Days"; color = "var(--warning)"; width = "55%"; grade = "Fair"; }
+        else if (seconds < 2592000) { timeMsg = Math.floor(seconds / 604800) + " Weeks"; color = "var(--warning)"; width = "65%"; grade = "Moderate"; }
+        else if (seconds < 31536000) { timeMsg = Math.floor(seconds / 2592000) + " Months"; color = "var(--success)"; width = "80%"; grade = "Decent"; }
+        else {
             const years = seconds / 31536000;
-            color = "var(--success)";
-            width = "100%";
-            grade = "Strong";
-
+            color = "var(--success)"; width = "100%"; grade = "Strong";
             if (years < 1000) timeMsg = Math.floor(years) + " Years";
             else if (years < 1e6) timeMsg = Math.floor(years/1e3) + "k Years";
             else if (years < 1e9) timeMsg = Math.floor(years/1e6) + "M Years";
@@ -317,13 +233,8 @@
     function toggleList(id, met) {
         const el = document.getElementById(id);
         const icon = el.querySelector('i');
-        if (met) {
-            el.className = 'met';
-            icon.className = 'fas fa-check-circle';
-        } else {
-            el.className = '';
-            icon.className = 'far fa-circle';
-        }
+        if (met) { el.className = 'met'; icon.className = 'fas fa-check-circle'; } 
+        else { el.className = ''; icon.className = 'far fa-circle'; }
     }
 
     function resetUI() {
@@ -332,10 +243,7 @@
         bitsDisplay.innerText = "0 bits (Ready)";
         bitsDisplay.style.color = "var(--accent)";
         bar.style.width = "0%";
-        document.querySelectorAll('.checklist li').forEach(li => {
-            li.className = '';
-            li.querySelector('i').className = 'far fa-circle';
-        });
+        document.querySelectorAll('.checklist li').forEach(li => { li.className = ''; li.querySelector('i').className = 'far fa-circle'; });
     }
 </script>
 </body>
