--- a/secure.html
+++ b/secure.html
@@ -8,7 +8,6 @@
 
     <style>
         :root {
-            /* --- Dark Mode (Default) --- */
             --bg: #0d1117;
             --card-bg: #161b22;
             --input-bg: #0d1117;
@@ -21,7 +20,6 @@
         }
 
         body.light-mode {
-            /* --- Light Mode --- */
             --bg: #f6f8fa;
             --card-bg: #ffffff;
             --input-bg: #ffffff;
@@ -39,11 +37,11 @@
             color: var(--text);
             display: flex;
             flex-direction: column;
-            align-items: center; /* Horizontally center main */
+            align-items: center; 
             min-height: 100vh;
         }
 
-        /* --- Updated Header: Left Corner Logo --- */
+
         header {
             width: 100%;
             max-width: 1250px; 
