--- a/password-security-analyzer.html
+++ b/password-security-analyzer.html
@@ -49,13 +49,13 @@
             transition: background-color 0.4s ease;
         }
 
-        /* --- Header Styles: Logo Left, Toggle Right --- */
+        /* --- Header Styles --- */
         header {
             width: 100%;
             max-width: 1200px;
             padding: 20px 40px;
             display: flex;
-            justify-content: space-between; /* Logo Left, Button Right */
+            justify-content: space-between; 
             align-items: center;
             z-index: 1000;
         }
