--- a/password.html
+++ b/password.html
@@ -15,7 +15,7 @@
             --text-heading: #0f172a;
             --text-body: #64748b;
             --accent: #2563eb;
-            --accent-hover: #1d4ed8;
+            --accent-hover: #1d68d8;
             --input-bg: #ffffff;
         }
 
@@ -62,8 +62,8 @@
         }
 
         .logo-text {
-            font-size: 1.5rem;
-            font-weight: 800;
+            font-size: 2rem;
+            font-weight: 750;
             color: var(--accent);
             text-decoration: none;
             display: flex;
@@ -72,8 +72,8 @@
         }
 
         .logo-text img { 
-            height: 30px; 
-            width: auto;
+            height: 40px; 
+            width: 35px;
         }
 
         .logo-subtext {
