--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <title>CyberWise - Your Tech Insights</title>
+    <link rel="icon" href="/Logo1 2.png" type="image/icon type">
+
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np/"
+}
+</script>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
      crossorigin="anonymous"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberWise - Your Tech Insights</title>
-    <link rel="icon" href="/Logo1 2.png" type="image/icon type">
-
-     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "CyberWise",
-      "url": "https://www.bhaskarsah.com.np/",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": {
-          "@type": "EntryPoint",
-          "urlTemplate": "https://www.bhaskarsah.com.np/search?q={search_term_string}"
-        },
-        "query-input": "required name=search_term_string"
-      }
-    }
-    </script>
 
     <meta property="og:CyberWise" content="CyberWise">
 
