--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise",
+  "name": "Cyberwise Tech",
   "url": "https://www.bhaskarsah.com.np/"
 }
 </script>
