--- a/AI-post.html
+++ b/AI-post.html
@@ -899,7 +899,7 @@
         <nav class="main-nav" id="mainNav">
             <ul>
                 <li class="has-dropdown">
-                    <a href="/IT-post.html"> Artificial Intelligence (AI) <span class="dropdown-arrow">▼</span></a>
+                    <a href="/AI-post.html"> Artificial Intelligence (AI) <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
                                 <li><a href="/IT.html">About Artificial Intelligence (AI)</a></li>
                                 <li><a href="/List-of-AI.html">List Of AI Tools</a></li>
