--- a/Darkweb-post.html
+++ b/Darkweb-post.html
@@ -899,7 +899,7 @@
         <nav class="main-nav" id="mainNav">
             <ul>
                 <li class="has-dropdown">
-                    <a href="/IT-post.html"> DarkWeb <span class="dropdown-arrow">▼</span></a>
+                    <a href="/Darkweb-post.html"> DarkWeb <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
                                 <li><a href="/Darkweb.html">About DarkWeb</a></li>
                                 
