--- a/science-technology-post.html
+++ b/science-technology-post.html
@@ -899,7 +899,7 @@
         <nav class="main-nav" id="mainNav">
             <ul>
                 <li class="has-dropdown">
-                    <a href="/IT-post.html"> Science and technology<span class="dropdown-arrow">▼</span></a>
+                    <a href="/science-technology-post.html"> Science and technology<span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
                                 <li><a href="/IT.html">About Science and technology</a></li>
                                 
