--- a/AI-post.html
+++ b/AI-post.html
@@ -901,7 +901,7 @@
                 <li class="has-dropdown">
                     <a href="/AI-post.html"> Artificial Intelligence (AI) <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
-                                <li><a href="/IT.html">About Artificial Intelligence (AI)</a></li>
+                                <li><a href="/AI.html">About Artificial Intelligence (AI)</a></li>
                                 <li><a href="/List-of-AI.html">List Of AI Tools</a></li>
                                 
                              </ul>
