--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
         <title>CyberWise - Your Tech Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
-   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "Cyberwise Tech", 
-  "url": "https://www.bhaskarsah.com.np/"
-}
-</script>
+ <meta property="og:url" content="https://www.bhaskarsah.com.np"/>
+  <meta property="og:site_name" content="CyberWise Tech"/>
+  <meta property="og:type" content="website"/>
+  <script type="application/ld+json">{"@context":"https://schema.org/","@type":"WebSite","name":"CyberWise Tech","url":"https://www.bhaskarsah.com.np"}</script>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
      crossorigin="anonymous"></script>
