--- a/Disclaimer.html
+++ b/Disclaimer.html
@@ -5,6 +5,8 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
      crossorigin="anonymous"></script>
 
+     <meta name="google-adsense-account" content="ca-pub-3663278458751008">
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TYFDVVX9W2"></script>
 <script>
