--- a/List-of-AI.html
+++ b/List-of-AI.html
@@ -4,6 +4,8 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
         crossorigin="anonymous"></script>
 
+        <meta name="google-adsense-account" content="ca-pub-3663278458751008">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free,Useful and list of Artificial Intelligence (AI) </title>
@@ -771,8 +773,8 @@
                     <li class="dropdown">
                         <a href="/AI.html">Artificial Intelligence (AI) <i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
-                            <a href="/AI.html#types">AI & Machine Learning</a>
                             <a href="/List-of-AI.html">Free and list of AI</a>
+                            <a href="/AI/ANI-vs-AGI-vs -ASI.html">Artificial Intelligence: ANI vs AGI vs ASI</a>
                             <a href="/AI.html#benefits">AI Ethics</a>
                             <a href="/AI.html#future">AI Applications</a>
                             <a href="#">AI Development</a>
