--- a/Onion-routing-tor-work.html
+++ b/Onion-routing-tor-work.html
@@ -4,6 +4,8 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3663278458751008"
         crossorigin="anonymous"></script>
 
+        <meta name="google-adsense-account" content="ca-pub-3663278458751008">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onion Routing & Anonymity Networks A Deep Dive into Tor, I2P, and Online Privacy</title>
