--- a/AI/ANI-vs-AGI-vs -ASI.html
+++ b/AI/ANI-vs-AGI-vs -ASI.html
@@ -1069,7 +1069,7 @@ to adapt and grow in an AI-driven world.
             <p>&copy; 2024 CyberWise. All rights reserved.</p>
             <ul class="footer-links">
                 <li><a href="/About Me.html">About Author</a></li>
-                <li><a href="/privacy policy.html">Privacy Policy</a></li>
+                <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                 <li><a href="/terms&condition.html">Terms and Condition</a></li>
                 <li><a href="/Disclaimer.html">Disclaimer</a></li>
                 <li><a href="/contact.html">Contact Us</a></li>
