--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@
                 <div class="footer-legal">
                     <p class="footer-copyright">&copy; 2024 CyberWise. All Rights Reserved.</p>
                     <nav class="footer-legal-links">
-                        <a href="/privacy policy.html">Privacy Policy</a>
+                        <a href="/privacy-policy.html">Privacy Policy</a>
                         <a href="/Disclaimer.html">Disclaimer</a>
                         <a href="/terms&condition.html">Terms and Condition</a>
                         <a href="/contact.html">Contact Us</a>
