--- a/Sci&Tech.html
+++ b/Sci&Tech.html
@@ -972,7 +972,7 @@
             <p>&copy; 2024 CyberWise. All rights reserved.</p>
             <ul class="footer-links">
                 <li><a href="/About Me.html">About Author</a></li>
-                <li><a href="/privacy policy.html">Privacy Policy</a></li>
+                <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                 <li><a href="/terms&condition.html">Terms and Condition</a></li>
                 <li><a href="/Disclaimer.html">Disclaimer</a></li>
                 <li><a href="/contact.html">Contact Us</a></li>
