--- a/protect-data-online.html
+++ b/protect-data-online.html
@@ -5,7 +5,7 @@
         crossorigin="anonymous"></script>
 
         <meta name="google-adsense-account" content="ca-pub-3663278458751008">
-        
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to Protect Your Data Online</title>
@@ -956,7 +956,7 @@
             <p>&copy; 2024 CyberWise. All rights reserved.</p>
             <ul class="footer-links">
                 <li><a href="/About Me.html">About Author</a></li>
-                <li><a href="/privacy policy.html">Privacy Policy</a></li>
+                <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                 <li><a href="/terms&condition.html">Terms and Condition</a></li>
                 <li><a href="/Disclaimer.html">Disclaimer</a></li>
                 <li><a href="/contact.html">Contact Us</a></li>
