--- a/science-technology-post.html
+++ b/science-technology-post.html
@@ -994,7 +994,7 @@
                 <div class="footer-legal">
                     <p class="footer-copyright">&copy; <span id="2024">2024</span> CyberWise. All Rights Reserved.</p>
                     <div class="footer-legal-links">
-                        <a href="/privacy policy.html">Privacy Policy</a>
+                        <a href="/privacy-policy.html">Privacy Policy</a>
                         <a href="/Disclaimer.html">Disclaimer</a>
                         <a href="/terms&condition.html">Terms and Condition</a>
                         <a href="/contact.html">Contact Us</a>
