--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -205,8 +205,6 @@ li {
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</a>.</p>
 
-<h3>Google AdSense and cookies</h3>
-<p></p>
 
 <h2>Interpretation and Definitions</h2>
 <h3>Interpretation</h3>
@@ -266,6 +264,7 @@ li {
 <p>Usage Data</p>
 </li>
 </ul>
+
 <h4>Usage Data</h4>
 <p>Usage Data is collected automatically when using the Service.</p>
 <p>Usage Data may include information such as Your Device's Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that You visit, the time and date of Your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</p>
@@ -371,10 +370,32 @@ li {
 <h2>Links to Other Websites</h2>
 <p>Our Service may contain links to other websites that are not operated by Us. If You click on a third party link, You will be directed to that third party's site. We strongly advise You to review the Privacy Policy of every site You visit.</p>
 <p>We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
+
+<h2>Google DoubleClick DART Cookie</h2>
+<p>Google, as a third-party vendor, uses cookies to serve ads on our site. It also serves ads using cookies, DART cookies most likely, by which it causes an ad to be displayed to our website visitors based off their visit to <a href="https://www.website.com/?source=SC" target="_blank">www.website.com</a> as well as other Internet Web sites. But, members and visitors who want to avoid DART cookies can do so by visiting the Google ad and content network Privacy Policy at the following URL - <a href="https://policies.google.com/technologies/ads" target="_blank">https://policies.google.com/technologies/ads</a></p>
+
+<h2>Our Advertising Partners</h2>
+<p>Some of the advertisers on our site use cookies and web beacons. Our advertising partners include:-</p>
+
+<ul>
+  <li>
+    <strong>Google AdSense:-</strong> Third parties that show you ads on CyberWise are using cookies to serve ads based on your prior visits to our website.
+  </li>
+</ul>
+
+<p>Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include … Google While each of these advertising partners has their own Privacy Policy for their site, an updated and hyperlinked resource is maintained here: Privacy Policies. Third-party ad servers or ad networks use technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on CyberWise, which are sent directly to users' browser.When this happens, they automatically receive your IP address. These technologies are used to measure the effectiveness of their advertising campaigns and/or personalize the advertising content that you see on websites that you visit.</p>
+
+<ul>
+  <li><p><strong>Note:- </strong>CyberWise has no access to or control over these cookies that are used by third-party advertisers.</p></li>
+</ul>
+
+
 <h2>Changes to this Privacy Policy</h2>
 <p>We may update Our Privacy Policy from time to time. We will notify You of any changes by posting the new Privacy Policy on this page.</p>
 <p>We will let You know via email and/or a prominent notice on Our Service, prior to the change becoming effective and update the &quot;Last updated&quot; date at the top of this Privacy Policy.</p>
 <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
+
+
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
