--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -249,6 +249,24 @@ li {
 <p><strong>You</strong> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</p>
 </li>
 </ul>
+
+<section>
+    <h3>Advertising and Google AdSense</h3>
+    <p>
+        We use Google AdSense to serve advertisements when you visit our website. 
+        <strong>Third-party vendors, including Google, use cookies</strong> to serve ads based on your prior visits to this website or other websites.
+    </p>
+    <p>
+        Google's use of advertising cookies enables it and its partners to serve ads to you based on your visit to <strong>bhaskarsah.com.np</strong> and/or other sites on the Internet.
+    </p>
+    <p>
+        You may opt out of personalized advertising by visiting 
+        <a href="https://www.google.com/settings/ads" target="_blank">Google Ads Settings</a>. 
+        Alternatively, you can opt out of a third-party vendor's use of cookies for personalized advertising by visiting 
+        <a href="http://www.aboutads.info" target="_blank">www.aboutads.info</a>.
+    </p>
+</section>
+
 <h2>Collecting and Using Your Personal Data</h2>
 <h3>Types of Data Collected</h3>
 <h4>Personal Data</h4>
