--- a/List-of-AI.html
+++ b/List-of-AI.html
@@ -774,7 +774,7 @@
                         <a href="/AI.html">Artificial Intelligence (AI) <i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
                             <a href="/List-of-AI.html">Free and list of AI</a>
-                            <a href="/AI/ANI-vs-AGI-vs -ASI.html">Artificial Intelligence: ANI vs AGI vs ASI</a>
+                            <a href="/AI/ANI-AGI-ASI.html">Artificial Intelligence: ANI vs AGI vs ASI</a>
                             <a href="/AI.html#benefits">AI Ethics</a>
                             <a href="/AI.html#future">AI Applications</a>
                             <a href="#">AI Development</a>
