--- a/Cloud-computing.html
+++ b/Cloud-computing.html
@@ -8,7 +8,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is information technology? | Full Explanation with Points & Detailed Overview</title>
+    <title>What Is Cloud Computing, and How Do AWS, Azure and Google Cloud Work?</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
