--- a/AI.html
+++ b/AI.html
@@ -774,9 +774,7 @@
                         <a href="/AI.html">Artificial Intelligence (AI) <i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
                             <a href="/List-of-AI.html">List of Free AI Tools</a>
-                            <a href="/AI/ANI-AGI-ASI.html">Artificial Intelligence: ANI vs AGI vs ASI</a>                            <a href="/AI.html#benefits">AI Ethics</a>
-                            <a href="/AI.html#future">AI Applications</a>
-                            <a href="#">AI Development</a>
+                            <a href="/AI/ANI-AGI-ASI.html">Artificial Intelligence: ANI vs AGI vs ASI</a>  
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
