--- a/Sci&Tech.html
+++ b/Sci&Tech.html
@@ -773,11 +773,7 @@
                     <li class="dropdown">
                         <a href="/Sci&Tech.html">Science and Technology<i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
-                            <a href="#">Emerging Tech</a>
-                            <a href="#">Innovations</a>
-                            <a href="#">Hardware & Gadgets</a>
-                            <a href="#">IoT (Internet of Things)</a>
-                            <a href="#">Future Tech</a>
+                            <a href="/emerging-tech.html">Emerging Tech</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
