--- a/network-security.html
+++ b/network-security.html
@@ -775,11 +775,7 @@
                         <div class="dropdown-content">
                             <a href="/protect-data-online.html">Data Privacy</a>
                             <a href="/network-security.html">Network Security</a>
-                            <a href="#">Endpoint Security</a>
-                            <a href="#">Vulnerability Management</a>
-                            <a href="#">Threat Intelligence</a>
-                            <a href="">Incident Response</a>
-                            <a href="">Digital Forensics</a>
+                            <a href="/Ransomware-attack.html">Incident Response</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
