--- a/protect-data-online.html
+++ b/protect-data-online.html
@@ -770,6 +770,14 @@
             </div>
             <nav class="main-nav" id="main-nav">
                 <ul>  
+                    <li class="dropdown">
+                        <a href="/CyberSecurity.html"> Cyber Security<i class="fas fa-chevron-down dropdown-arrow"></i></a>
+                        <div class="dropdown-content">
+                            <a href="/protect-data-online.html">Data Privacy</a>
+                            <a href="/network-security.html">Network Security</a>
+                            <a href="/Ransomware-attack.html">Incident Response</a>
+                        </div>
+                    </li>
                     <li><a href="/About Me.html">About Me</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
