--- a/Sci&Tech.html
+++ b/Sci&Tech.html
@@ -774,6 +774,7 @@
                         <a href="/Sci&Tech.html">Science and Technology<i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
                             <a href="/emerging-tech.html">Emerging Tech</a>
+                            <a href="/Advantage-Disadvantage-Science&Tech.html">Advantages and Disadvantages of Science & Tech</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
