--- a/Onion-routing-tor-work.html
+++ b/Onion-routing-tor-work.html
@@ -903,6 +903,7 @@
                         <div class="dropdown-content">
                             <a href="/Darkweb.html">Dark Web Explained</a>
                             <a href="/Onion-routing-tor-work.html">Onion Routing & How Tor Works</a>
+                            <a href="/Marketplaces-Cryptocurrency.html">Marketplaces and Cryptocurrency</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
