--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
         <title>CyberWise - Your Tech Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
- <meta property="og:url" content="https://www.bhaskarsah.com.np"/>
-  <meta property="og:site_name" content="CyberWise Tech"/>
-  <meta property="og:type" content="website"/>
-  <script type="application/ld+json">{"@context":"https://schema.org/","@type":"WebSite","name":"CyberWise Tech","url":"https://www.bhaskarsah.com.np"}</script>
+ <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "Bhaskar Sah",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
 
     <style>
         
