--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CyberWise - Your Tech Insights</title>
+        <title>CyberWise - Tech & Security Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
  <meta property="og:site_name" content="CyberWise Tech" />
@@ -25,7 +25,7 @@
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "CyberWise Tech",
-  "alternateName": "Bhaskar Sah",
+  "alternateName": "CyberWise",
   "url": "https://www.bhaskarsah.com.np"
 }
 </script>
@@ -924,7 +924,7 @@
             </button>
             <div class="logo-container">
                 <a href="https://bhaskarsah.com.np" class="logo-text">CyberWise<img src="/Nepal flag.gif" width="30" height="13"></a>        
-               <div class="logo-subtext">Your Tech Insights</div>
+               <div class="logo-subtext">Tech & Security Insights</div>
             </div>
 
             <div class="top-bar">
