--- a/Advantage-Disadvantage-Science&Tech.html
+++ b/Advantage-Disadvantage-Science&Tech.html
@@ -10,10 +10,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Bhaskar Sah">
-    <title>Science & Technology, benefit of science and Technology in future</title>
+    <title>Advantages and Disadvantages of Science and Technology</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
+
 </head>
 
 <style>
@@ -776,7 +794,7 @@
             <div class="logo-container">
                 <a href="https://bhaskarsah.com.np" class="logo-text">CyberWise<img src="/Nepal flag.gif" width="30"
                         height="13"></a>
-                <div class="logo-subtext">Your Tech Insights</div>
+                <div class="logo-subtext">Tech & Security Insights</div>
             </div>
             <nav class="main-nav" id="main-nav">
                 <ul>
