--- a/IT-post.html
+++ b/IT-post.html
@@ -12,24 +12,22 @@
     <title>CyberWise - Your Tech Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
-     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "CyberWise",
-      "url": "https://www.bhaskarsah.com.np/",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": {
-          "@type": "EntryPoint",
-          "urlTemplate": "https://www.bhaskarsah.com.np/search?q={search_term_string}"
-        },
-        "query-input": "required name=search_term_string"
-      }
-    }
-    </script>
+ <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
-    <meta property="og:site_name" content="CyberWise">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
 
     <style>
         /* --- General Styles --- */
@@ -885,7 +883,7 @@
             </button>
             <div class="logo-container">
                 <a href="https://bhaskarsah.com.np" class="logo-text">CyberWise<img src="/Nepal flag.gif" width="30" height="13"></a> 
-                <div class="logo-subtext">Your Tech Insights</div>
+                <div class="logo-subtext">Tech & Security Insights</div>
             </div>
 
             <div class="top-bar">
@@ -905,6 +903,7 @@
                     <ul class="dropdown-menu">
                                 <li><a href="/IT.html">About Information Technology (IT)</a></li>
                                 <li><a href="/Cloud-computing.html">Cloud Computing</a></li>
+                                <li><a href="/IT-and-Society.html">IT & Society</a></li>
                                 
                              </ul>
                     </li>
