--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
+     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
+
+
     <style>
         /* --- General & Scroll Behavior --- */
         html {
@@ -262,7 +280,7 @@
                     CyberWise
                     <img src="/Nepal flag.gif" alt="Nepal Flag" style="margin-left: 8px; height: 20px; width: auto;">
                 </a>
-                <div class="logo-subtext">Your Tech Insights</div>
+                <div class="logo-subtext">Tech & Security Insights</div>
             </div>
             <nav class="main-nav">
                 <ul>
