--- a/password-security-analyzer.html
+++ b/password-security-analyzer.html
@@ -15,6 +15,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
+
+
     <style>
         * {
             margin: 0;
@@ -180,7 +198,7 @@
                 CyberWise
                 <img src="/Nepal flag.gif" alt="Flag">
             </a>
-            <div class="logo-subtext">Your Tech Insights</div>
+            <div class="logo-subtext">Tech & Security Insights</div>
         </div>
         
         <button class="toggle-btn" id="theme-btn">
