--- a/password.html
+++ b/password.html
@@ -12,6 +12,24 @@
     <title>CyberWise | Password Generator</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
+
     
     <style>
         :root {
@@ -230,7 +248,7 @@
                 CyberWise
                 <img src="/Nepal flag.gif" alt="🇳🇵">
             </a>
-            <div class="logo-subtext">Your Tech Insights</div>
+            <div class="logo-subtext">Tech & Security Insights</div>
         </div>
         
         <button class="toggle-btn" id="theme-btn">
