--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -24,12 +24,28 @@
 
     <link rel="stylesheet" href="style.css">
 
+     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
+
     <style>
-                /* Imported font: Inter */
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&display=swap');
 
-/* List of variables */
+
 
 :root {
 /* Colors: */
