--- a/secure.html
+++ b/secure.html
@@ -12,6 +12,23 @@
     <title>CyberWise | Secure Link Detector</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
+     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:url" content="https://www.bhaskarsah.com.np" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
+<meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise",
+  "url": "https://www.bhaskarsah.com.np"
+}
+</script>
+
     <style>
         :root {
             --bg: #0d1117;
@@ -173,7 +190,7 @@
                 CyberWise
                 <img src="/Nepal flag.gif" alt="Flag">
             </a>
-            <div class="logo-subtext">Your Tech Insights</div>
+            <div class="logo-subtext">Tech & Security Insights</div>
         </div>
         <button id="theme-toggle" onclick="toggleTheme()">🌙</button>
     </header>
