--- a/creditcard.html
+++ b/creditcard.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:site_name" content="CyberWise" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:title" content="CyberWise" />
 <meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
 <meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
@@ -24,7 +24,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise Tech",
+  "name": "CyberWise",
   "alternateName": "CyberWise",
   "url": "https://www.bhaskarsah.com.np"
 }
