--- a/IT-post.html
+++ b/IT-post.html
@@ -9,13 +9,13 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberWise - Your Tech Insights</title>
+    <title>CyberWise - Tech & Security Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
- <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:site_name" content="CyberWise" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:title" content="CyberWise" />
 <meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
 <meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
@@ -23,7 +23,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise Tech",
+  "name": "CyberWise",
   "alternateName": "CyberWise",
   "url": "https://www.bhaskarsah.com.np"
 }
@@ -965,7 +965,6 @@
                 <div class="footer-column">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="#">Account</a></li>
                         <li><a href="/password-security-analyzer.html">Password Security Analyzer</a></li>
                         <li><a href="/blog-post.html">Blog Post</a></li>
                         <li><a href="/password.html">Password Generator</a></li>
