--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <title>CyberWise - Tech & Security Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
- <meta property="og:site_name" content="CyberWise Tech" />
+ <meta property="og:site_name" content="CyberWise" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:title" content="CyberWise" />
 <meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
 <meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
@@ -24,7 +24,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise Tech",
+  "name": "CyberWise",
   "alternateName": "CyberWise",
   "url": "https://www.bhaskarsah.com.np"
 }
@@ -268,7 +268,7 @@
         .main-nav ul {
             display: flex;
             justify-content: center;
-            gap: 25px;
+            gap: 60px;
             position: relative;
         }
 
@@ -961,15 +961,6 @@
                     <a href="/IT-post.html"> IT Related</a>
                 </li>
                 
-            <li class="has-dropdown">
-                    <a href="#"> Account and Keys <span class="dropdown-arrow">▼</span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Microsoft and Windows Keys</a></li>
-                        <li><a href="#">Crunchyroll and CapCut premium account</a></li>
-                        <li><a href="#">VPN keys and Accounts</a></li>
-                        <li><a href="#">Others...</a></li>
-                    </ul>
-                </li>
             </ul>
         </nav>
     </header>
@@ -1212,7 +1203,6 @@
                 <div class="footer-column">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="#">Account</a></li>
                         <li><a href="/password-security-analyzer.html">Password Security Analyzer</a></li>
                         <li><a href="/blog-post.html">Blog Post</a></li>
                         <li><a href="/password.html">Password Generator</a></li>
