--- a/password-security-analyzer.html
+++ b/password-security-analyzer.html
@@ -15,10 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:site_name" content="CyberWise" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:title" content="CyberWise" />
 <meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
 <meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
@@ -26,7 +26,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise Tech",
+  "name": "CyberWise",
   "alternateName": "CyberWise",
   "url": "https://www.bhaskarsah.com.np"
 }
