--- a/terms&condition.html
+++ b/terms&condition.html
@@ -23,10 +23,10 @@
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
 
-     <meta property="og:site_name" content="CyberWise Tech" />
+<meta property="og:site_name" content="CyberWise" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="CyberWise Tech" />
+<meta property="og:title" content="CyberWise" />
 <meta property="og:description" content="This platform covers Cybersecurity, Artificial Intelligence, Science & Technology, and the fascinating parts of the Dark Web and so on.." />
 <meta property="og:image" content="https://www.bhaskarsah.com.np/Logo1 2.png" />
 
@@ -34,7 +34,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise Tech",
+  "name": "CyberWise",
   "alternateName": "CyberWise",
   "url": "https://www.bhaskarsah.com.np"
 }
