--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>CyberWise - Tech & Security Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
 
- <meta property="og:site_name" content="CyberWise" />
+ <meta property="og:site_name" content="CyberWise Tech" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="CyberWise" />
@@ -24,8 +24,8 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise",
-  "alternateName": "CyberWise",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise Tech",
   "url": "https://www.bhaskarsah.com.np"
 }
 </script>
