--- a/About Me.html
+++ b/About Me.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-<meta property="og:site_name" content="CyberWise" />
+    <meta property="og:site_name" content="CyberWise Tech" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="CyberWise" />
@@ -24,8 +24,8 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise",
-  "alternateName": "CyberWise",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise Tech",
   "url": "https://www.bhaskarsah.com.np"
 }
 </script>
