--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-<meta property="og:site_name" content="CyberWise" />
+<meta property="og:site_name" content="CyberWise Tech" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="CyberWise" />
@@ -21,8 +21,8 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise",
-  "alternateName": "CyberWise",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise Tech",
   "url": "https://www.bhaskarsah.com.np"
 }
 </script>
