--- a/password-security-analyzer.html
+++ b/password-security-analyzer.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-<meta property="og:site_name" content="CyberWise" />
+<meta property="og:site_name" content="CyberWise Tech" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="CyberWise" />
@@ -26,8 +26,8 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise",
-  "alternateName": "CyberWise",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise Tech",
   "url": "https://www.bhaskarsah.com.np"
 }
 </script>
