--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-<meta property="og:site_name" content="CyberWise" />
+<meta property="og:site_name" content="CyberWise Tech" />
 <meta property="og:url" content="https://www.bhaskarsah.com.np" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="CyberWise" />
@@ -35,8 +35,8 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "CyberWise",
-  "alternateName": "CyberWise",
+  "name": "CyberWise Tech",
+  "alternateName": "CyberWise Tech",
   "url": "https://www.bhaskarsah.com.np"
 }
 </script>
