--- a/contact.html
+++ b/contact.html
@@ -278,7 +278,7 @@
             <div class="logo-container">
                 <a href="https://bhaskarsah.com.np" class="logo-text">
                     CyberWise
-                    <img src="/Nepal flag.gif" alt="Nepal Flag" style="margin-left: 8px; height: 20px; width: auto;">
+                    <img src="/Nepal flag.gif" alt="Nepal Flag" style="margin-left: 8px; height: 35px; width: 35px;">
                 </a>
                 <div class="logo-subtext">Tech & Security Insights</div>
             </div>
