--- a/blog-post.html
+++ b/blog-post.html
@@ -908,6 +908,7 @@
                                 <li><a href="/protect-data-online.html">How to Protect Your Data Online </a></li>
                                 <li><a href="/Ransomware-attack.html">Ransomware attack- Complete guide</a></li>
                                 <li><a href="/network-security.html">Network Security</a></li>
+                                <li><a href="/deepfake-technology.html"></a>deepfake Technology</li>
                              </ul>
 
                              <li class="has-dropdown"> <a href="/AI-post.html">Artificial Intelligence (AI)  Categories <span class="dropdown-arrow">▼</span></a>
