--- a/CyberSecurity.html
+++ b/CyberSecurity.html
@@ -794,6 +794,7 @@
                             <a href="/protect-data-online.html">Data Privacy</a>
                             <a href="/network-security.html">Network Security</a>
                             <a href="/Ransomware-attack.html">Incident Response</a>
+                            <a href="/deepfake-technology.html">deepfake Technology</a>
                         </div>
                     </li>
                     <li><a href="/About Me.html">About Me</a></li>
